# entservices-remotecontrol

./: ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  NOTICE  PRODUCT.md  README.md  build_dependencies.sh  cov_build.sh  services.cmake
.github/: copilot-instructions.md
.github/instructions/: Plugin.instructions.md  Pluginimplementation.instructions.md 
.github/workflows/: component-release.yml  native_full_build.yml  native_full_build_with_tests.yml  tests-trigger.yml  update-changelog-and-api-version.yml
RemoteControl/: RemoteControl.cpp  RemoteControl.h
cmake/: FindCTRLM.cmake  FindIARMBus.cmake  Findjsoncpp.cmake
helpers/: PluginInterfaceBuilder.h  UtilsJsonRpc.h
plugin/: CHANGELOG.md  CMakeLists.txt  Module.cpp  Module.h  PluginVersion.h  RemoteControl.conf.in  RemoteControl.config  RemoteControl.cpp  RemoteControl.h  RemoteControlImplementation.cpp  RemoteControlImplementation.h
plugin/test/: CMakeLists.txt  Module.h  remoteControlTestClient.cpp
